@@ -1,9 +1,11 @@
 ---
 fixtures:
   repositories:
-    stdlib:   "https://github.com/simp/puppetlabs-stdlib.git"
-    simplib:  "https://github.com/simp/pupmod-simp-simplib.git"
+    compliance_markup:
+      repo: "https://github.com/simp/pupmod-simp-compliance_markup"
+      branch: "testing_hotfix_06062019"
+    stdlib: "https://github.com/simp/puppetlabs-stdlib.git"
+    simplib: "https://github.com/simp/pupmod-simp-simplib.git"
     simp_banners: "https://github.com/simp/pupmod-simp-simp_banners"
   symlinks:
     issue: "#{source_dir}"
-
